--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -43,3 +43,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+      
+      
+ env: dev     
