--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -22,7 +22,7 @@ spring:
 #      uri: mongodb://localhost:27017
 
   application:
-    name: shen-server
+    name: shen
 
 
 
@@ -45,4 +45,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
       
       
- env: dev     
+env: dev     
