--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -21,9 +21,6 @@ spring:
       host: localhost
 #      uri: mongodb://localhost:27017
 
-  application:
-    name: shen
-
 
 
 
@@ -39,10 +36,10 @@ pagehelper:
   params: count=countSql
 
 #eureka 客户端
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
       
       
 env: dev     
