--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -17,7 +17,7 @@ spring:
   data:
     mongodb:
       port: 27017
-      database: shen
+      database: shen-test
       host: localhost
 #       uri: mongodb://localhost:27017
 
