--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -42,4 +42,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
       
       
-env: dev     
+env: dev
+shen:
+    name:jin
+    age:18
