--- a/api-dev.yml
+++ b/api-dev.yml
@@ -1,1 +1,13 @@
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+logging:
+  level:
+    com.spring.goods: debug
+zuul:
+  routes:
+    goods: /goods/**
+    config:
+      path: /config/**
+      service-id: config
