--- a/api-dev.yml
+++ b/api-dev.yml
@@ -8,6 +8,8 @@ logging:
 zuul:
   routes:
     goods: /goods/**
+    ignored-pattern: 
+      - /goods/**
     config:
       path: /config/**
       service-id: config
