--- a/shen-dev.yml
+++ b/shen-dev.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1:3306/test
+    url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8&useSSL=true
     # 使用druid数据源
 #    type: com.alibaba.druid.pool.DruidDataSource
   #  driver-class-name: com.mysql.jdbc.Driver
